испрвления по Тревису

--- a/index.html
+++ b/index.html
@@ -182,7 +182,31 @@
 </template>
 
 <script src="js/stat.js"></script>
-<script src="js/settings.js"></script>
+<script>
+  var fireballSize = 22;
+  var wizardWidth = 70;
+  var wizardSpeed = 3;
+
+  function getFireballSpeed (isHeadWind) {
+    if (isHeadWind) {
+      return 5;
+    }
+
+    return 2;
+  }
+
+  function getWizardHeight () {
+    return 1.337 * wizardWidth;
+  }
+
+  function getWizardX (mapWidth) {
+    return (mapWidth - wizardWidth) / 2;
+  }
+
+  function getWizardY (mapHeight) {
+    return mapHeight / 2;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
